clear unused import & add error codes & update openapi.json
