# app/schemas/base.py
@@ -7,6 +7,13 @@ class Status(str, Enum):
     ERROR = "ERROR"
 
 
+class ErrorCode(int, Enum):
+    UNKNOWN = -1
+    NOT_FOUND = 1
+    NOT_OWNER = 2
+    NOT_EXIST = 3
+
+
 class BaseResponse(BaseModel):
     status: Status
     message: str = ""
@@ -18,3 +25,4 @@ class OKResponse(BaseResponse):
 
 class ErrorResponse(BaseResponse):
     status: Status = Status.ERROR
+    error_code: ErrorCode = ErrorCode.UNKNOWN
