# app/static/openapi.json
@@ -5,17 +5,17 @@
         "version": "0.1.0"
     },
     "paths": {
-        "/ping": {
+        "/api/ping": {
             "get": {
                 "summary": "Ping",
-                "operationId": "ping_ping_get",
+                "operationId": "ping_api_ping_get",
                 "responses": {
                     "200": {
                         "description": "Successful Response",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "title": "Response Ping Ping Get",
+                                    "title": "Response Ping Api Ping Get",
                                     "anyOf": [
                                         {
                                             "$ref": "#/components/schemas/OKResponse"
@@ -31,17 +31,17 @@
                 }
             }
         },
-        "/ping-with-token": {
+        "/api/ping-with-token": {
             "get": {
                 "summary": "Ping With Token",
-                "operationId": "ping_with_token_ping_with_token_get",
+                "operationId": "ping_with_token_api_ping_with_token_get",
                 "responses": {
                     "200": {
                         "description": "Successful Response",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "title": "Response Ping With Token Ping With Token Get",
+                                    "title": "Response Ping With Token Api Ping With Token Get",
                                     "anyOf": [
                                         {
                                             "$ref": "#/components/schemas/OKResponse"
@@ -180,10 +180,140 @@
                     }
                 }
             }
+        },
+        "/parse/data": {
+            "post": {
+                "summary": "Parse Html",
+                "operationId": "parse_html_parse_data_post",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ParsingRequest"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "title": "Response Parse Html Parse Data Post",
+                                    "anyOf": [
+                                        {
+                                            "$ref": "#/components/schemas/ParsingResponse"
+                                        },
+                                        {
+                                            "$ref": "#/components/schemas/ErrorResponse"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/parse/history": {
+            "get": {
+                "summary": "Parse Html",
+                "operationId": "parse_html_parse_history_get",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "title": "Response Parse Html Parse History Get",
+                                    "anyOf": [
+                                        {
+                                            "$ref": "#/components/schemas/ParsingHistoryResponse"
+                                        },
+                                        {
+                                            "$ref": "#/components/schemas/ErrorResponse"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/parse/history/{id}": {
+            "get": {
+                "summary": "Parse Html",
+                "operationId": "parse_html_parse_history__id__get",
+                "parameters": [
+                    {
+                        "required": true,
+                        "schema": {
+                            "title": "Id",
+                            "type": "integer"
+                        },
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "title": "Response Parse Html Parse History  Id  Get",
+                                    "anyOf": [
+                                        {
+                                            "$ref": "#/components/schemas/ParsingResponse"
+                                        },
+                                        {
+                                            "$ref": "#/components/schemas/ErrorResponse"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
         "schemas": {
+            "ErrorCode": {
+                "title": "ErrorCode",
+                "enum": [
+                    -1,
+                    1,
+                    2,
+                    3
+                ],
+                "type": "integer",
+                "description": "An enumeration."
+            },
             "ErrorResponse": {
                 "title": "ErrorResponse",
                 "type": "object",
@@ -200,6 +330,14 @@
                         "title": "Message",
                         "type": "string",
                         "default": ""
+                    },
+                    "error_code": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/ErrorCode"
+                            }
+                        ],
+                        "default": -1
                     }
                 }
             },
@@ -232,6 +370,135 @@
                         "title": "Message",
                         "type": "string",
                         "default": ""
+                    }
+                }
+            },
+            "ParsingElement": {
+                "title": "ParsingElement",
+                "required": [
+                    "word",
+                    "value"
+                ],
+                "type": "object",
+                "properties": {
+                    "word": {
+                        "title": "Word",
+                        "type": "string"
+                    },
+                    "value": {
+                        "title": "Value",
+                        "type": "integer"
+                    }
+                }
+            },
+            "ParsingElementData": {
+                "title": "ParsingElementData",
+                "required": [
+                    "elements"
+                ],
+                "type": "object",
+                "properties": {
+                    "elements": {
+                        "title": "Elements",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/ParsingElement"
+                        }
+                    }
+                }
+            },
+            "ParsingHistory": {
+                "title": "ParsingHistory",
+                "required": [
+                    "id",
+                    "url"
+                ],
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "title": "Id",
+                        "type": "integer"
+                    },
+                    "url": {
+                        "title": "Url",
+                        "type": "string"
+                    }
+                }
+            },
+            "ParsingHistoryResponse": {
+                "title": "ParsingHistoryResponse",
+                "required": [
+                    "data"
+                ],
+                "type": "object",
+                "properties": {
+                    "status": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/Status"
+                            }
+                        ],
+                        "default": "OK"
+                    },
+                    "message": {
+                        "title": "Message",
+                        "type": "string",
+                        "default": ""
+                    },
+                    "data": {
+                        "title": "Data",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/ParsingHistory"
+                        }
+                    }
+                }
+            },
+            "ParsingRequest": {
+                "title": "ParsingRequest",
+                "required": [
+                    "url"
+                ],
+                "type": "object",
+                "properties": {
+                    "url": {
+                        "title": "Url",
+                        "type": "string"
+                    },
+                    "save": {
+                        "title": "Save",
+                        "type": "boolean",
+                        "default": false
+                    }
+                }
+            },
+            "ParsingResponse": {
+                "title": "ParsingResponse",
+                "required": [
+                    "url",
+                    "data"
+                ],
+                "type": "object",
+                "properties": {
+                    "status": {
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/Status"
+                            }
+                        ],
+                        "default": "OK"
+                    },
+                    "message": {
+                        "title": "Message",
+                        "type": "string",
+                        "default": ""
+                    },
+                    "url": {
+                        "title": "Url",
+                        "type": "string"
+                    },
+                    "data": {
+                        "$ref": "#/components/schemas/ParsingElementData"
                     }
                 }
             },
